# dasom-settings

./: .gitignore  Makefile.am  README  THANKS  configure.ac
debian/: control  copyright  rules
po/: POTFILES.in  ko.po
src/: Makefile.am  dasom-settings.c  org.freedesktop.Dasom.dasom-settings.gschema.xml
